<resources>
    <string name="app_name">Guess Who</string>
    <string name="start_a_quiz">Start a Quiz</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="celebrity_quiz">Celebrity Quiz!</string>
    <string name="who_is_this">Who is this?</string>
    <string name="re_open_the_app">Re open the app please</string>
    <string name="correct">Correct</string>
    <string name="failed">Failed</string>
    <string name="person_is">Person is</string>
    <string name="out_of_lives">Out of Lives</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="leave">Leave</string>
    <string name="show_ad">Show Ad</string>
    <string name="get_one_live">Watch an Ad to get Extra Live</string>
    <string name="new_high_score">New High Score!!</string>
    <string name="app_id">ca-app-pub-7003413723788424~9007674094</string>
    <string name="banner_ad_id">ca-app-pub-7003413723788424/2377620908</string>
    <string name="no_ads_found">No Ads Found</string>
    <string name="retry">Retry</string>
</resources>
