<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/frame"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_gioconda"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:id="@+id/ID_highest_score"
        android:layout_toStartOf="@id/frame"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"/>


    <RelativeLayout
        android:id="@+id/quiz"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_confetti"/>

        <TextView
            android:layout_toEndOf="@id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_centerVertical="true"
            android:text="@string/celebrity_quiz"
            android:textColor="@color/white"
            android:textStyle="bold"
            />


    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ID_main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_below="@id/quiz"/>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ID_easy_cv"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ID_medium_cv"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ID_hard_cv"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>






        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/ID_start_quiz_cv"
            style="@style/main_card_view"
            app:cardCornerRadius="36dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                style="@style/main_relative_layout">

                <TextView
                    style="@style/main_text_view"
                    android:text="@string/start_a_quiz"
                    />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>