<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="300dp"
    android:minHeight="100dp"
    android:layout_height="wrap_content"
    android:background="@color/dark_red2"
    android:orientation="vertical">

    <TextView
        android:visibility="gone"
        android:text="New High Score"
        android:id="@+id/txt_high_score"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        />



    <LinearLayout
        android:layout_below="@id/txt_high_score"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_like"
            android:padding="8dp" />


        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/out_of_lives"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_one_live"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/title"/>



    <LinearLayout
        android:layout_below="@id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_video_player"
            />


        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/watch_ad"
            android:textColor="@color/dark_red2"
            android:textStyle="bold" />

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/leave"
            android:textColor="#000000"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_exit"
            />


    </LinearLayout>

</RelativeLayout>